preloader added wip

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
       document.getElementsByTagName('head')[0].appendChild(script);
     </script>
+    <script data-pace-options='{"ghostTime" = 2000}' src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
+    <!-- <script src="pace.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
