--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maleo Emballage</title>
-    <script>
-      window.onUsersnapLoad = function(api) {
-        api.init();
-      };
-      var script = document.createElement('script');
-      script.defer = 1;
-      script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
-      document.getElementsByTagName('head')[0].appendChild(script);
-    </script>
-    <script data-pace-options='{"ghostTime" = 2000}' src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
-    <!-- <script src="pace.js"></script> -->
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Maleo Emballage</title>
+  <script>
+    window.onUsersnapLoad = function (api) {
+      api.init();
+    };
+    var script = document.createElement('script');
+    script.defer = 1;
+    script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
+    document.getElementsByTagName('head')[0].appendChild(script);
+  </script>
+
+  <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
+  <!-- <script data-pace-options='{ghostTime = 7000}' src="/pace-js/pace.js"></script> -->
+  <link rel="stylesheet" href="./Components/preloader.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script>
+
+    Pace.on('progress', function(progress) {
+      console.log('Current progress:', progress);
+      const paceProgressInner = document.querySelector('.pace-progress-inner');
+      if (paceProgressInner) {
+        paceProgressInner.style.width = `${progress}%`;
+      }
+    });
+
+
+    Pace.on('done', function () {
+      setTimeout(function() {
+        const paceProgress = document.querySelector('.pace-progress');
+  
+        // Modify styles of the parent element which affects the pseudo-elements
+        if (paceProgress) {
+          paceProgress.style.setProperty('--progress-top', '-13px');
+          paceProgress.style.setProperty('--progress-opacity', '0');
+        }
+  
+        setTimeout(function() {
+  
+          paceProgress.style.top = '-100%';
+  
+   
+        }, 1500);
+      }, 500);
+    });
+
+  </script>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
