safari compatibilty and prefixing

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
         setTimeout(function() {
   
-          paceProgress.style.top = '-100%';
+          paceProgress.style.top = '-110vh';
   
    
         }, 1500);
