performance, linking, and social links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     document.getElementsByTagName('head')[0].appendChild(script);
   </script>
 
-  <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
-  <!-- <script data-pace-options='{ghostTime = 7000}' src="/pace-js/pace.js"></script> -->
-  <link rel="stylesheet" href="./Components/preloader.css">
+  <!-- <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script> -->
+  <script src="src/Components/pace.min.js"></script>
+  <link rel="stylesheet" href="src/Components/preloader.css" />
 </head>
 
 <body>
