--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </script>
 
   <!-- <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script> -->
-  <script src="./pace.js"></script>
+  <script src="/pace.js"></script>
   <link rel="stylesheet" href="src/Components/preloader.css" />
 </head>
 
