test without usersnap

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/mal.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maleo Emballage</title>
-  <script>
+  <!-- <script>
     window.onUsersnapLoad = function (api) {
       api.init();
     };
@@ -14,10 +14,10 @@
     script.defer = 1;
     script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
     document.getElementsByTagName('head')[0].appendChild(script);
-  </script>
+  </script> -->
 
-  <!-- <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script> -->
-  <script src="/pace.js"></script>
+  <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
+  <!-- <script src="/pace.js"></script> -->
   <link rel="stylesheet" href="src/Components/preloader.css" />
 </head>
 
