--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
     script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
     document.getElementsByTagName('head')[0].appendChild(script);
   </script> -->
+  <link rel="preload" href="https://unpkg.com/pace-js@1.0.2/pace.min.js" as="script" />
 
+  <link
+  rel="preload"
+  href="/MonumentUltrabold.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin />
+  <link
+  rel="preload"
+  href="/MonumentRegular.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin />
+  <link
+  rel="preload"
+  href="/neue.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin />
   <script src="https://unpkg.com/pace-js@1.0.2/pace.min.js"></script>
   <!-- <script src="/pace.js"></script> -->
   <link rel="stylesheet" href="src/Components/preloader.css" />
