routing fixed, color animation for who page and legal page

--- a/index.html
+++ b/index.html
@@ -17,32 +17,20 @@
   </script> -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js" as="script" />
 
-  <link
-  rel="preload"
-  href="/MonumentUltrabold.woff2"
-  as="font"
-  type="font/woff2"
-  crossorigin />
-  <link
-  rel="preload"
-  href="/MonumentRegular.woff2"
-  as="font"
-  type="font/woff2"
-  crossorigin />
-  <link
-  rel="preload"
-  href="/neue.woff2"
-  as="font"
-  type="font/woff2"
-  crossorigin />
+  <link rel="preload" href="/MonumentUltrabold.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="/MonumentRegular.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="/neue.woff2" as="font" type="font/woff2" crossorigin />
+
   <script>
     paceOptions = {
       startOnPageLoad: false,
       restartOnRequestAfter: false,
       ghostTime: 7000,
-  }
+    }
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+  
   <!-- <script src="/pace.js"></script> -->
   <link rel="stylesheet" href="src/Components/preloader.css" />
 </head>
@@ -53,7 +41,7 @@
 
   <script>
 
-    Pace.on('progress', function(progress) {
+    Pace.on('progress', function (progress) {
       const paceProgressInner = document.querySelector('.pace-progress-inner');
       if (paceProgressInner) {
         paceProgressInner.style.width = `${progress}%`;
@@ -62,20 +50,20 @@
 
 
     Pace.on('done', function () {
-      setTimeout(function() {
+      setTimeout(function () {
         const paceProgress = document.querySelector('.pace-progress');
-  
+
         // Modify styles of the parent element which affects the pseudo-elements
         if (paceProgress) {
           paceProgress.style.setProperty('--progress-top', '-13px');
           paceProgress.style.setProperty('--progress-opacity', '0');
         }
-  
-        setTimeout(function() {
+
+        setTimeout(function () {
           if (paceProgress) {
             paceProgress.classList.add('translate-up');
           }
-   
+
         }, 1500);
       }, 500);
     });
