--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     script.src = 'https://widget.usersnap.com/global/load/1d718cef-f8f4-4a4e-b2bb-94e43ce01c0f?onload=onUsersnapLoad';
     document.getElementsByTagName('head')[0].appendChild(script);
   </script> -->
+  <script async src="https://tally.so/widgets/embed.js"></script>
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js" as="script" />
 
   <link rel="preload" href="/MonumentUltrabold.woff2" as="font" type="font/woff2" crossorigin />
