--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script> -->
   
   <link rel="stylesheet" href="src/Components/preloader.css" />
+  <script type="text/javascript">
+    function waitUntilInstalled(registration) {
+      return new Promise(function(resolve, reject) {
+        if (registration.installing) {        
+          registration.installing.addEventListener('statechange', function(e) {
+            if (e.target.state === 'installed') {
+              resolve();
+            } else if (e.target.state === 'redundant') {
+              reject();
+            }
+          });
+        } else {        
+          resolve();
+        }
+      });
+    }
+    
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./sw.js', { scope: './' })
+    .then(waitUntilInstalled)    
+      .catch(function(error) {    
+        console.error(error);    
+      });
+  }
+  </script>
+  <script type="text/javascript" src="./sw.js"></script>
 </head>
 
 <body>
