--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     }
     
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./sw.js', { scope: './' })
+    navigator.serviceWorker.register('/sw.js', { scope: '/' })
     .then(waitUntilInstalled)    
       .catch(function(error) {    
         console.error(error);    
       });
   }
   </script>
-  <script type="text/javascript" src="./sw.js"></script>
+  <script type="text/javascript" src="/sw.js"></script>
 </head>
 
 <body>
