--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script> -->
 
   <link rel="stylesheet" href="src/Components/preloader.css" />
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     function waitUntilInstalled(registration) {
       return new Promise(function (resolve, reject) {
         if (registration.installing) {
@@ -50,9 +50,9 @@
           console.error(error);
         });
     }
-  </script>
-  <script  type="text/javascript" src="/src/sw.js"></script>
-  <script type="text/javascript">/* eslint-disable no-useless-escape */
+  </script> -->
+  <!-- <script  type="text/javascript" src="/src/sw.js"></script> -->
+  <!-- <script type="text/javascript">/* eslint-disable no-useless-escape */
     var CACHE_VERSION = 1;
     var CURRENT_CACHES = {
       prefetch: 'prefetch-cache-v' + CACHE_VERSION
@@ -149,7 +149,7 @@
           })
         );
       }
-    });</script>
+    });</script> -->
 </head>
 
 <body>
