--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script> -->
 
   <link rel="stylesheet" href="src/Components/preloader.css" />
-  <script>
+  <script type="text/javascript">
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/src/service-worker.js')
+      navigator.serviceWorker.register('./src/service-worker.js')
         .then(function(registration) {
           console.log('Service Worker registered with scope:', registration.scope);
         })
@@ -37,7 +37,7 @@
         });
     }
   </script>
-  <script type="text/javascript" src="/src/service-worker.js"></script>
+  <script type="text/javascript" src="./src/service-worker.js"></script>
 
   </head>
 
