--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="src/Components/preloader.css" />
   <script type="text/javascript">
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./src/service-worker.js')
+      navigator.serviceWorker.register('./src/service-worker.js',  { scope: './' })
         .then(function(registration) {
           console.log('Service Worker registered with scope:', registration.scope);
         })
