--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     document.getElementsByTagName('head')[0].appendChild(script);
   </script> -->
   <script async src="https://tally.so/widgets/embed.js"></script>
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js" as="script" />
+  <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js" as="script" /> -->
 
   <link rel="preload" href="/MonumentUltrabold.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/MonumentRegular.woff2" as="font" type="font/woff2" crossorigin />
@@ -26,7 +26,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script> -->
 
   <link rel="stylesheet" href="src/Components/preloader.css" />
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('./service-worker.js',  { scope: './' })
         .then(function(registration) {
@@ -36,8 +36,8 @@
           console.log('Service Worker registration failed:', error);
         });
     }
-  </script>
-  <script type="text/javascript" src="./service-worker.js"></script>
+  </script> -->
+  <!-- <script type="text/javascript" src="./service-worker.js"></script> -->
 
   </head>
 
